@@ -20,6 +20,7 @@
 @string{ELETTERS = "Electronics Letters"}
 @string{IEEEMGWLETTERS = "IEEE Microwave and Guided Wave Letters"}
 @string{MWJ = "Microwave Journal"}
+@string{APMC = "Asia-Pacific Microwave Conference"}
 
 %
 % books
@@ -66,6 +67,7 @@
  publisher = {Universitas Saraviensis},
  address   = {Universit\"at des Saarlandes},
  year      = {2001},
+ local     = "{script4.pdf}",
 }
 
 @book{Dobrowolski,
@@ -218,8 +220,8 @@
  month   = dec,
  year    = {1979},
  pages   = {1036-1038},
- local   = "{01124054.pdf}",
  local   = "{01129787.pdf}",
+ local   = "{01124054.pdf}",
 }
 
 @article{Hammerstad,
@@ -351,6 +353,19 @@
  year    = {1984},
  pages   = {83-90},
  local   = "{01132616.pdf}",
+}
+
+@article{Kirschning6,
+ author  = {Manfred Kirschning and Rolf H. Jansen},
+ title   = "{Corrections to "Accurate Wide-Range Design Equations for the
+             Frequency-Dependent Characteristic of Parallel Coupled
+             Microstrip Lines"}",
+ journal = IEEETMTT,
+ volume  = {33},
+ number  = {3},
+ month   = mar,
+ year    = {1985},
+ pages   = {288},
  local   = "{01133005.pdf}",
 }
 
@@ -373,6 +388,7 @@
  month   = dec,
  year    = {1983},
  pages   = {89-96},
+ local   = "{.pdf}",
 }
 
 @article{Kobayashi3,
@@ -488,32 +504,6 @@
  local   = "{01130959.pdf}",
 }
 
-@article{Kirschning5,
- author  = {M. Kirschning and R. H. Jansen},
- title   = "{Accurate Wide-Range Design Equations for the
-             Frequency-Dependent Characteristic of Parallel
-	     Coupled Microstrip Lines}",
- journal = IEEETMTT,
- volume  = {32},
- number  = {1},
- month   = jan,
- year    = {1984},
- pages   = {83-90},
-}
-
-@article{Kirschning6,
- author  = {M. Kirschning and R. H. Jansen},
- title   = "{Corrections to "Accurate Wide-Range Design Equations for the
-             Frequency-Dependent Characteristic of Parallel
-	     Coupled Microstrip Lines"}",
- journal = IEEETMTT,
- volume  = {33},
- number  = {3},
- month   = mar,
- year    = {1985},
- pages   = {288},
-}
-
 @article{Kirschning7,
  author  = {M. Kirschning and R. H. Jansen and N. H. L. Koster},
  title   = "{Accurate Model for open end effect of microstrip lines}",
@@ -572,6 +562,16 @@
  year    = {1992},
  pages   = {1481-1484},
  local   = "{00188291.pdf}",
+}
+
+@article{Russer1,
+ author  = {Peter Russer and Stefan M\"uller},
+ title   = "{Noise Analysis of Microwave Circuits with General Topology and
+             Arbitrary Representation}",
+ journal = APMC,
+ address = {Adelaide},
+ year    = {1992},
+ pages   = {819-822},
  local   = "{00672246.pdf}",
 }
 
@@ -586,6 +586,16 @@
  year    = {1976},
  pages   = {235-238},
  local   = "{01084200.pdf}",
+}
+
+@article{Hillbrand1,
+ author  = {Herbert Hillbrand and Peter H. Russer},
+ title   = "{Correction to "An Efficient Method for Computer Aided Noise
+             Analysis of Linear Amplifier Networks"}",
+ journal = "{Letters to the Editor}",
+ month   = jul,
+ year    = {1976},
+ pages   = {691},
  local   = "{01084145.pdf}",
 }
 
@@ -710,4 +720,29 @@
  year    = {1994},
  pages   = {1268-1272},
  local   = "{00299766.pdf}",
+}
+
+@article{Silvester,
+ author  = {P. Silvester and Peter Benedek},
+ title   = "{Equivalent Capacitances of Microstrip Open Circuits}",
+ journal = IEEETMTT,
+ volume  = {20},
+ number  = {8},
+ month   = aug,
+ year    = {1972},
+ pages   = {511-516},
+ local   = "{01127798.pdf}",
+}
+
+@article{Hoefer1,
+ author  = {Wolfgang J. R. Hoefer},
+ title   = "{Equivalent Series Inductivity of a Narrow Transverse Slit in
+             Microstrip}",
+ journal = IEEETMTT,
+ volume  = {25},
+ number  = {10},
+ month   = oct,
+ year    = {1977},
+ pages   = {822-824},
+ local   = "{01129220.pdf}",
 }
