@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: inductor.cpp,v 1.6 2004-09-06 06:40:07 ela Exp $
+ * $Id: inductor.cpp,v 1.7 2004-09-07 12:53:11 ela Exp $
  *
  */
 
@@ -51,24 +51,35 @@ void inductor::calcSP (nr_double_t frequency) {
 }
 
 void inductor::initDC (dcsolver *) {
+  voltageSource (1, 1, 2);
   setVoltageSources (1);  
 }
 
 void inductor::calcDC (void) {
   clearY ();
-  setC (1, 1, +1.0); setC (1, 2, -1.0);
-  setB (1, 1, +1.0); setB (2, 1, -1.0);
 }
 
 void inductor::initAC (acsolver *) {
-  clearC ();
-  clearB ();
-  setVoltageSources (0);  
+  nr_double_t l = getPropertyDouble ("L");
+
+  // for non-zero inductance usual MNA entries
+  if (l != 0.0) {
+    setVoltageSources (0);
+  }
+  // for zero inductance create a zero voltage source
+  else {
+    initDC (NULL);
+    calcDC ();
+  }
 }
 
 void inductor::calcAC (nr_double_t frequency) {
-  nr_double_t l = getPropertyDouble ("L") / z0;
-  complex y = rect (0, -1 / (2.0 * M_PI * frequency * l));
-  setY (1, 1, +y); setY (2, 2, +y);
-  setY (1, 2, -y); setY (2, 1, -y);
+  nr_double_t l = getPropertyDouble ("L");
+
+  // for non-zero inductance usual MNA entries
+  if (l != 0.0) {
+    complex y = rect (0, -1 / (2.0 * M_PI * frequency * l));
+    setY (1, 1, +y); setY (2, 2, +y);
+    setY (1, 2, -y); setY (2, 1, -y);
+  }
 }
