@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: vac.cpp,v 1.5 2004-09-06 06:40:07 ela Exp $
+ * $Id: vac.cpp,v 1.6 2004-09-07 12:53:11 ela Exp $
  *
  */
 
@@ -46,10 +46,7 @@ vac::vac () : circuit (2) {
 }
 
 void vac::initDC (dcsolver *) {
-  setC (1, 1, +1.0); setC (1, 2, -1.0);
-  setB (1, 1, +1.0); setB (2, 1, -1.0);
-  setD (1, 1, 0.0);
-  setE (1, 0.0);
+  voltageSource (1, 1, 2);
 }
 
 void vac::initAC (acsolver *) {
