@@ -1,3 +1,8 @@
+2004-09-07  Stefan Jahn  <stefan@lkcc.org>
+
+	* circuit.cpp (voltageSource): New helper function setting
+	up an internal voltage source for the MNA.
+
 2004-09-06  Stefan Jahn  <stefan@lkcc.org>
 
 	* acsolver.h (class acsolver): New class implementing
